[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hybrid-classifier"
version = "1.0.0"
description = "Hybrid Quantum-Classical Neural Network for binary MNIST classification using PennyLane and PyTorch."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "jstampson" }
]
keywords = [
    "quantum computing",
    "quantum machine learning",
    "hybrid neural network",
    "pennylane",
    "pytorch",
    "MNIST",
    "variational quantum circuit",
    "NISQ",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pennylane>=0.36.0",
    "pennylane_lightning>=0.36.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pillow>=10.0.0",
]

[project.urls]
Repository = "https://github.com/jstampson/HybridClassifier"
Issues = "https://github.com/jstampson/HybridClassifier/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
